[package]
name = "ursula"
version = "0.2.4"
description = "Ursula - Ansible Runner"
authors = ["Ursula"]
license = "MIT"
edition = "2021"

[lib]
name = "ursula_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ursula"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
dirs = "5"
lazy_static = "1.4"
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
